--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -17,37 +17,19 @@
               <div class="row justify-content-center">
                 <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
 
-                  <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Devenez membre</p>
+                  <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Connectez-vous</p>
 
-                  <form class="mx-1 mx-md-4" method="post" th:action="@{/api/simple/new}">
+                  <form class="mx-1 mx-md-4" method="post" th:action="@{/register/new}">
                     <div th:object="${user}">
                       <div class="d-flex flex-row align-items-center mb-4">
                         <i class="fas fa-user fa-lg me-3 fa-fw"></i>
                         <div data-mdb-input-init class="form-outline flex-fill mb-0">
-                          <input type="text" class="form-control" name="firstname" th:field="*{firstname}" id="firstname"
-                            placeholder="Entrer votre nom" />
-                          <p th:if="${#fields.hasErrors('firstname')}" class="text-danger" th:errors="*{firstname}"></p>
-                        </div>
-                      </div>
-
-                      <div class="d-flex flex-row align-items-center mb-4">
-                        <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
-                        <div data-mdb-input-init class="form-outline flex-fill mb-0">
-                          <input type="text" class="form-control" name="lastname" th:field="*{lastname}" id="lastname"
-                            placeholder="Entrer votre prenom" />
-                          <p th:if="${#fields.hasErrors('lastname')}" class="text-danger" th:errors="*{lastname}"></p>
-                        </div>
-                      </div>
-
-
-                      <div class="d-flex flex-row align-items-center mb-4">
-                        <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
-                        <div data-mdb-input-init class="form-outline flex-fill mb-0">
                           <input type="text" class="form-control" name="username" th:field="*{username}" id="username"
-                            placeholder="Entrer votre nom d'utilisateur" />
-                          <p th:if="${#fields.hasErrors('username')}" class="text-danger" th:errors="*{username}"></p>
+                            placeholder="Nom d'utilisateur" />
+                          <p th:if="${#fields.hasErrors('username')}" class="text-danger" th:errors="*{firstname}"></p>
                         </div>
                       </div>
+
 
                       <div class="d-flex flex-row align-items-center mb-4">
                         <i class="fas fa-key fa-lg me-3 fa-fw"></i>
@@ -59,18 +41,9 @@
                       </div>
                     </div>
 
-
-
-                    <div class="form-check d-flex justify-content-center mb-5">
-                      <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3c" />
-                      <label class="form-check-label" for="form2Example3">
-                       J'accepte tous les <a href="#!">termes de service</a>
-                      </label>
-                    </div>
-
                     <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
                       <button type="submit" data-mdb-button-init data-mdb-ripple-init
-                        class="btn btn-primary btn-lg">S'inscrire</button>
+                        class="btn btn-primary btn-lg">Se connecter</button>
                     </div>
 
                   </form>
