--- a/src/main/resources/templates/layouts/landinglayout.html
+++ b/src/main/resources/templates/layouts/landinglayout.html
@@ -14,6 +14,7 @@
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
     <link th:href="@{/css/homepage.css}" rel="stylesheet" />
+    <link th:href="@{/css/styles_home.css}" rel="stylesheet"/>
 </head>
 
 <body>
