fix: adding modification to personnal page

--- a/src/main/resources/templates/layouts/layout_simple_user.html
+++ b/src/main/resources/templates/layouts/layout_simple_user.html
@@ -65,7 +65,7 @@
                         <div class="sb-sidenav-menu-heading">Core</div>
                         <a class="nav-link" th:href="@{/home}">
                             <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
-                            Dashboard
+                            Feeds
                         </a>
                         <div class="sb-sidenav-menu-heading">Addons</div>
                         <a class="nav-link collapsed" href="#" data-bs-toggle="collapse"
