--- a/src/main/resources/templates/personal-page.html
+++ b/src/main/resources/templates/personal-page.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout}">
+<html lang="en" xmlns:th="http://thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layouts/layout_simple_user}">
 
 <head>
     <meta charset="UTF-8">
@@ -8,7 +8,7 @@
 
 <body>
     <section layout:fragment="content">
-        <h1 class="mt-4">Dashboard</h1>
+        <h1 class="mt-4">Feeds</h1>
         <ol class="breadcrumb mb-4">
             <li class="breadcrumb-item active">Dashboard</li>
         </ol>
